--- a/app/src/main/res/layout/generate_fragment.xml
+++ b/app/src/main/res/layout/generate_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#959494"
     android:tag="SET"
-    tools:context="pathfinder.attack_calc.generate_fragment">
+    tools:context="com.pathfinder.attackcalc.generate_fragment">
 
     <ListView
         android:id="@+id/result_list"
@@ -25,6 +25,7 @@
         android:id="@+id/gen_but"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#6C6C6C"
         android:text="Generate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +37,7 @@
         android:id="@+id/refresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#6C6C6C"
         android:text="rfsh"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +85,7 @@
                     android:foregroundGravity="center"
                     android:gravity="center"
                     android:text="hit "
-                    android:textSize="16sp" />
+                    android:textSize="14sp" />
 
                 <ImageButton
                     android:id="@+id/Fstminus"
@@ -119,7 +121,7 @@
                     android:gravity="center"
                     android:paddingStart="10dp"
                     android:text="damage"
-                    android:textSize="16sp" />
+                    android:textSize="14sp" />
 
                 <ImageButton
                     android:id="@+id/Fstminus2"
@@ -153,7 +155,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingStart="12dp">
+            android:paddingStart="5dp">
 
             <TextView
                 android:id="@+id/textView22"
@@ -167,7 +169,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="none" />
+                android:text="none"
+                android:textSize="16sp" />
         </LinearLayout>
 
     </LinearLayout>
