--- a/app/src/main/res/layout/result_view.xml
+++ b/app/src/main/res/layout/result_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="#656060"
     android:baselineAligned="false"
     android:gravity="center|center_horizontal"
     android:orientation="vertical">
@@ -43,31 +44,37 @@
 
             <TextView
                 android:id="@+id/textView18"
-                android:layout_width="179dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
 
                 android:paddingStart="5dp"
                 android:text="Damage rolls" />
 
             <TextView
                 android:id="@+id/textView20"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
 
-                android:text="Sneak" />
+                android:layout_gravity="center_vertical"
+                android:autoSizeTextType="uniform"
+                android:gravity="center"
+                android:maxLines="1"
+                android:text="Sneak"
+                android:textSize="6sp" />
 
             <TextView
                 android:id="@+id/textView19"
-                android:layout_width="50dp"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
 
+                android:layout_weight="1"
                 android:gravity="center"
                 android:text="Total " />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
 
             android:divider="#2C2C2C"
             android:showDividers="middle">
@@ -84,10 +91,10 @@
                 android:textSize="20sp" />
 
             <TableRow
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:paddingEnd="5dp">
+                android:paddingEnd="2dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -120,7 +127,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:gravity="start|top|center_vertical"
-                                android:text="__"
+                                android:text="___"
                                 android:textSize="16sp" />
 
                             <TextView
@@ -128,7 +135,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:gravity="start|top|center_vertical"
-                                android:text="_"
+                                android:text=" __"
                                 android:textSize="16sp" />
                         </TableRow>
 
@@ -141,13 +148,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_weight="0"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="="
                     android:textSize="24sp" />
 
                 <TextView
                     android:id="@+id/d20throw"
-                    android:layout_width="33dp"
+                    android:layout_width="30dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center_horizontal|center_vertical"
@@ -157,45 +165,46 @@
             </TableRow>
 
             <TableRow
-                android:layout_width="179dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
 
-                android:gravity="center_vertical">
+                >
 
                 <TableLayout
-                    android:layout_width="178dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:foregroundGravity="center_vertical|center_horizontal"
-                    android:gravity="center"
-                    android:weightSum="3">
+
+                    >
 
                     <TableRow
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_height="wrap_content"
+
                         android:paddingBottom="2dp">
 
                         <TextView
                             android:id="@+id/attack_num1"
-                            android:layout_width="25dp"
-                            android:layout_height="match_parent"
+                            android:layout_width="20dp"
 
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
                             android:autoSizeTextType="uniform"
                             android:gravity="center"
+                            android:maxLines="1"
                             android:paddingTop="10dp"
                             android:paddingBottom="10dp"
                             android:text="1"
                             android:textAlignment="gravity"
                             android:textSize="12sp"
-                            app:autoSizeMinTextSize="12dp" />
+                            app:autoSizeMinTextSize="20dp" />
 
                         <TextView
                             android:id="@+id/textView14"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
+                            android:layout_weight="0"
                             android:gravity="center_horizontal|center_vertical"
                             android:paddingBottom="4dp"
                             android:text="x"
@@ -205,15 +214,19 @@
                             android:id="@+id/img1"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
+                            android:layout_gravity="center"
+                            android:layout_weight="0"
                             android:src="@drawable/d6" />
 
                         <TextView
                             android:id="@+id/bonus1"
+
                             android:layout_width="30dp"
                             android:layout_height="match_parent"
-
+                            android:layout_weight="1"
                             android:autoSizeTextType="uniform"
                             android:gravity="center"
+                            android:maxLines="1"
                             android:paddingTop="10dp"
                             android:paddingBottom="10dp"
                             android:text="0"
@@ -225,39 +238,46 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_weight="1"
+                            android:layout_weight="0"
                             android:gravity="center_horizontal|center_vertical"
-                            android:paddingLeft="1dp"
-                            android:paddingRight="1dp"
-                            android:paddingBottom="4dp"
                             android:text="="
                             android:textSize="24sp" />
 
-                        <TextView
-                            android:id="@+id/answer1"
-                            android:layout_height="wrap_content"
+                        <TableRow
+                            android:layout_width="30dp"
+                            android:layout_height="match_parent">
 
-                            android:layout_gravity="center_horizontal|center_vertical"
-                            android:layout_weight="1"
-                            android:foregroundGravity="center_vertical"
-                            android:gravity="center"
-                            android:text="0"
-                            android:textSize="20sp" />
+                            <TextView
+                                android:id="@+id/answer1"
+
+                                android:layout_width="match_parent"
+
+
+                                android:layout_height="match_parent"
+                                android:autoSizeTextType="uniform"
+                                android:gravity="center"
+                                android:maxLines="1"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:text="0"
+                                android:textAlignment="gravity"
+                                android:textSize="14sp" />
+                        </TableRow>
 
                     </TableRow>
 
                     <TableRow
                         android:id="@+id/table2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:paddingBottom="2dp"
                         android:visibility="visible">
 
                         <TextView
                             android:id="@+id/attack_num2"
-                            android:layout_width="0dp"
                             android:layout_height="match_parent"
 
+                            android:layout_weight="1"
                             android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:paddingTop="10dp"
@@ -280,13 +300,14 @@
                             android:id="@+id/img2"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
+                            android:layout_weight="0"
                             android:src="@drawable/d10" />
 
                         <TextView
                             android:id="@+id/bonus2"
-                            android:layout_width="30dp"
                             android:layout_height="match_parent"
 
+                            android:layout_weight="1"
                             android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:paddingTop="10dp"
@@ -300,37 +321,44 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_weight="1"
+                            android:layout_weight="0"
                             android:gravity="center_horizontal|center_vertical"
-                            android:paddingLeft="1dp"
-                            android:paddingRight="1dp"
-                            android:paddingBottom="4dp"
                             android:text="="
                             android:textSize="24sp" />
 
-                        <TextView
-                            android:id="@+id/answer2"
-
+                        <TableRow
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent">
 
-                            android:layout_gravity="center_vertical"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="0"
-                            android:textSize="20sp" />
+                            <TextView
+                                android:id="@+id/answer2"
+
+                                android:layout_width="match_parent"
+
+
+                                android:layout_height="match_parent"
+                                android:autoSizeTextType="uniform"
+                                android:gravity="center"
+                                android:maxLines="1"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:text="0"
+                                android:textAlignment="gravity"
+                                android:textSize="14sp" />
+                        </TableRow>
+
                     </TableRow>
 
                     <TableRow
                         android:id="@+id/table3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:paddingBottom="2dp">
 
                         <TextView
                             android:id="@+id/attack_num3"
-                            android:layout_width="0dp"
                             android:layout_height="match_parent"
+                            android:layout_weight="1"
                             android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:paddingTop="10dp"
@@ -352,13 +380,14 @@
                             android:id="@+id/img3"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
+                            android:layout_weight="0"
                             android:src="@drawable/d10" />
 
                         <TextView
                             android:id="@+id/bonus3"
-                            android:layout_width="30dp"
                             android:layout_height="match_parent"
 
+                            android:layout_weight="1"
                             android:autoSizeTextType="uniform"
                             android:gravity="center"
                             android:paddingTop="10dp"
@@ -372,24 +401,28 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_weight="1"
+                            android:layout_weight="0"
                             android:gravity="center_horizontal|center_vertical"
-                            android:paddingLeft="1dp"
-                            android:paddingRight="1dp"
-                            android:paddingBottom="4dp"
                             android:text="="
                             android:textSize="24sp" />
 
-                        <TextView
-                            android:id="@+id/answer3"
+                        <TableRow
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent">
 
-                            android:layout_gravity="center_vertical"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="0"
-                            android:textSize="20sp" />
+                            <TextView
+                                android:id="@+id/answer3"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:autoSizeTextType="uniform"
+                                android:gravity="center"
+                                android:maxLines="1"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:text="0"
+                                android:textAlignment="gravity"
+                                android:textSize="14sp" />
+                        </TableRow>
 
                     </TableRow>
                 </TableLayout>
@@ -397,33 +430,43 @@
             </TableRow>
 
             <TableRow
-                android:layout_width="47dp"
-                android:layout_height="match_parent">
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/sneakky"
-                    android:layout_width="match_parent"
+
+
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:foregroundGravity="center|fill"
+
                     android:gravity="center"
+                    android:maxLines="1"
                     android:text="0"
-                    android:textSize="22sp" />
+                    android:textAlignment="gravity"
+                    android:textSize="20sp" />
             </TableRow>
 
             <TableRow
-                android:layout_width="47dp"
-                android:layout_height="match_parent">
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/total_result"
-                    android:layout_width="match_parent"
+
+
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+
                     android:gravity="center"
+                    android:maxLines="1"
                     android:text="0"
-                    android:textSize="24sp" />
+                    android:textAlignment="gravity"
+                    android:textSize="20sp" />
             </TableRow>
 
         </TableRow>
