--- a/app/src/main/res/layout/attac_st_listview.xml
+++ b/app/src/main/res/layout/attac_st_listview.xml
@@ -2,17 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#9C9393"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:divider="#2C2C2C"
+        android:id="@+id/era"
+        android:layout_width="fill_parent"
+
+        android:layout_height="fill_parent"
+        android:divider="@drawable/divider"
+        android:minHeight="70dp"
+        android:orientation="vertical"
         android:paddingStart="5dp"
-        android:showDividers="middle">
+        android:showDividers="middle|beginning|end">
 
         <TextView
             android:id="@+id/cur_num"
@@ -27,28 +32,47 @@
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingStart="20dp">
+            android:divider="@drawable/divider"
+            android:dividerPadding="12dip"
+            android:showDividers="middle|beginning|end">
 
-            <TextView
-                android:id="@+id/hit_modifier"
-                android:layout_width="55dp"
-                android:layout_height="match_parent"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="10"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
 
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/hit_modifier"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+
+                    android:foregroundGravity="center|right"
+                    android:gravity="right"
+                    android:text="+10"
+                    android:textSize="24sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </TableRow>
 
         <TableLayout
-            android:layout_width="159dp"
-            android:layout_height="wrap_content"
-            android:weightSum="3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
 
-            >
+            android:gravity="center"
+            android:paddingStart="10dp"
+            android:weightSum="3">
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:foregroundGravity="center"
+                android:gravity="center"
                 android:paddingTop="2dp"
                 android:paddingBottom="2dp">
 
@@ -215,13 +239,30 @@
                 android:focusable="false"
 
                 android:isScrollContainer="false"
+                android:textColor="#FFFFFF"
+
+
+                android:textColorHint="#FFFFFF"
                 app:icon="@android:drawable/ic_menu_close_clear_cancel"
-
-
                 app:iconGravity="top"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:rippleColor="#FFFFFF" />
+
+            <TextView
+                android:id="@+id/attack_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoSizeMaxTextSize="14sp"
+                android:autoSizeTextType="uniform"
+                android:maxLines="1"
+                android:text="TextView"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/Delbut"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </TableRow>
 
