--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -38,18 +38,30 @@
                 android:textSize="20sp" />
 
             <TableRow
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <EditText
                     android:id="@+id/editHit"
-                    android:layout_width="88dp"
+                    android:layout_width="68dp"
                     android:layout_height="match_parent"
                     android:ems="10"
                     android:gravity="center"
                     android:inputType="numberSigned|number"
+                    android:maxLength="3"
                     android:text="3"
                     android:textSize="30sp" />
+
+                <EditText
+                    android:id="@+id/enter_at_name"
+                    android:layout_width="130dp"
+                    android:layout_height="match_parent"
+                    android:ems="10"
+                    android:gravity="right|center_vertical"
+                    android:hint="Attack name"
+                    android:inputType="textPersonName"
+                    android:maxLength="12"
+                    android:textColorHint="#77FFFFFF" />
 
             </TableRow>
 
@@ -82,7 +94,8 @@
                     android:alwaysDrawnWithCache="false"
                     android:background="@null"
                     android:entries="@array/SpinNumbers"
-                    android:gravity="center_horizontal|center_vertical" />
+                    android:gravity="center_horizontal|center_vertical"
+                    android:popupBackground="#2E2E2E" />
 
                 <TextView
                     android:id="@+id/textViewd5"
@@ -120,6 +133,7 @@
                     android:ems="10"
                     android:gravity="center"
                     android:inputType="numberSigned|number"
+                    android:maxLength="2"
                     android:text="3"
                     android:textSize="30sp" />
             </TableRow>
@@ -160,6 +174,7 @@
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:background="@null"
+                    android:popupBackground="#2E2E2E"
                     android:entries="@array/SpinNumbers"
                     android:gravity="center_horizontal" />
 
@@ -195,6 +210,7 @@
                     android:ems="10"
                     android:gravity="center"
                     android:inputType="numberSigned|number"
+                    android:maxLength="2"
                     android:text="2"
                     android:textSize="30sp" />
             </TableRow>
@@ -237,7 +253,9 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:entries="@array/SpinNumbers"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:popupBackground="#2E2E2E"
+                    />
 
                 <TextView
                     android:id="@+id/textView25"
@@ -272,6 +290,7 @@
 
                     android:gravity="center"
                     android:inputType="numberSigned|number"
+                    android:maxLength="2"
                     android:text="1"
                     android:textSize="30sp" />
             </TableRow>
@@ -318,6 +337,7 @@
 
                     android:gravity="center"
                     android:inputType="number"
+                    android:maxLength="2"
                     android:text="1"
                     android:textSize="30sp" />
 
@@ -351,6 +371,7 @@
         android:backgroundTint="#6C6C6C"
         android:onClick="AddItemToList"
         android:text="Edit 1"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
@@ -361,6 +382,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#6C6C6C"
         android:text="Add"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/EditButton"
         app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
