--- a/app/src/main/res/layout/result_view.xml
+++ b/app/src/main/res/layout/result_view.xml
@@ -19,7 +19,7 @@
         <TableRow
             android:id="@+id/header"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="128dp"
             android:background="#DF8F8F"
             android:divider="#2C2C2C"
             android:showDividers="middle">
@@ -27,7 +27,7 @@
             <TextView
                 android:id="@+id/textView21"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="22dp"
                 android:layout_gravity="center"
                 android:paddingStart="3dp"
                 android:paddingEnd="3dp"
@@ -65,7 +65,7 @@
             <TextView
                 android:id="@+id/textView19"
                 android:layout_width="40dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
 
                 android:layout_weight="1"
                 android:gravity="center"
@@ -90,79 +90,95 @@
                 android:text="N"
                 android:textSize="20sp" />
 
-            <TableRow
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingEnd="2dp">
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/attack_name_gen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="5dp"
+                    android:text="TextView"
+                    android:textColor="#FFFFFF" />
+
+                <TableRow
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:orientation="vertical">
+                    android:foregroundGravity="center"
+                    android:gravity="center"
+                    android:paddingEnd="2dp">
 
-                    <ImageView
-                        android:id="@+id/img4"
-                        android:layout_width="54dp"
-                        android:layout_height="60dp"
-                        android:layout_gravity="center|end"
-                        android:layout_weight="0"
-                        android:paddingTop="2dp"
-                        android:src="@drawable/d20" />
-
-                    <TableRow
+                    <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="end"
-                        android:paddingLeft="0dp">
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/img4"
+                            android:layout_width="54dp"
+                            android:layout_height="60dp"
+                            android:layout_gravity="center|end"
+                            android:layout_weight="0"
+                            android:src="@drawable/d20" />
 
                         <TableRow
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center|end">
+                            android:layout_height="match_parent"
+                            android:layout_gravity="end"
+                            android:paddingLeft="0dp">
 
-                            <TextView
-                                android:id="@+id/d20_kinuli"
+                            <TableRow
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:gravity="start|top|center_vertical"
-                                android:text="___"
-                                android:textSize="16sp" />
+                                android:layout_gravity="center|end">
 
-                            <TextView
-                                android:id="@+id/hit_modifier"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:gravity="start|top|center_vertical"
-                                android:text=" __"
-                                android:textSize="16sp" />
+                                <TextView
+                                    android:id="@+id/d20_kinuli"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="start|top|center_vertical"
+                                    android:text="___"
+                                    android:textSize="16sp" />
+
+                                <TextView
+                                    android:id="@+id/hit_modifier"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="start|top|center_vertical"
+                                    android:text=" __"
+                                    android:textSize="16sp" />
+                            </TableRow>
+
                         </TableRow>
 
-                    </TableRow>
+                    </LinearLayout>
 
-                </LinearLayout>
+                    <TextView
+                        android:id="@+id/equal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="0"
+                        android:gravity="center_horizontal|center_vertical"
+                        android:text="="
+                        android:textSize="24sp" />
 
-                <TextView
-                    android:id="@+id/equal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="0"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="="
-                    android:textSize="24sp" />
+                    <TextView
+                        android:id="@+id/d20throw"
+                        android:layout_width="30dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center_horizontal|center_vertical"
+                        android:text="0"
+                        android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/d20throw"
-                    android:layout_width="30dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="0"
-                    android:textSize="20sp" />
-
-            </TableRow>
+                </TableRow>
+            </LinearLayout>
 
             <TableRow
                 android:layout_width="match_parent"
