--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,20 +3,19 @@
     <style name="Theme.D20attack_calc" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
 
-        <item name="colorPrimaryVariant">#151515</item>
+        <item name="colorPrimaryVariant">#000000</item>
 
 
         <item name="android:textColor">#D3FFFFFF</item>
         <item name="android:editTextColor">#D3FFFFFF</item>
 
 
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">#151515</item>
         <!-- Customize your theme here. -->
     </style>
+
+
 
 
 </resources>
