--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,7 +7,7 @@
 
 
     android:background="#959494"
-    tools:context="com.pathfinder.attackcalc.settings_fragment">
+    tools:context="com.pathfinder.attackcalc.SettingsFragment">
 
     <TableLayout
         android:id="@+id/tableLayout"
