--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,7 +7,7 @@
 
 
     android:background="#959494"
-    tools:context="com.pathfinder.attackcalc.Fragments.SettingsFragment">
+    tools:context="com.pathfinder.attackcalc.fragments.SettingsFragment">
 
     <TableLayout
         android:id="@+id/tableLayout"
