--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/Tabs"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="#1E1E1E"
         app:layout_constraintEnd_toEndOf="parent"
 
@@ -23,6 +23,7 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:scrollbarSize="6dp"
             android:text="Generate" />
 
         <com.google.android.material.tabs.TabItem
