--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,26 +9,30 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/Tabs"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
         android:background="#1E1E1E"
         app:layout_constraintEnd_toEndOf="parent"
-
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tabIndicatorColor="#B544E6B9"
-        app:tabSelectedTextColor="#B544E6B9">
+        app:tabSelectedTextColor="#B544E6B9"
+
+        app:tabTextAppearance="@style/TabLayoutTextAppearance"
+
+        >
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scrollbarSize="6dp"
+            android:scrollbarSize="8dp"
             android:text="Generate" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:scrollbarSize="8dp"
             android:text="Settings" />
 
 
