--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -86,7 +86,6 @@
 
                 <Spinner
                     android:id="@+id/Spin_n1"
-
                     style="@style/spiin_style"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
@@ -393,7 +392,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listView"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -406,6 +405,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/generate_header" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
