--- a/app/src/main/res/layout/generate_fragment.xml
+++ b/app/src/main/res/layout/generate_fragment.xml
@@ -8,7 +8,8 @@
     android:tag="SET"
     tools:context="com.pathfinder.attackcalc.fragments.GenerateFragment">
 
-    <ListView
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/result_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -17,9 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
-    </ListView>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
     <Button
         android:id="@+id/gen_but"
